<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.hackerhgl.buttons.HomeFragment">

    <ScrollView
        android:id="@+id/main_activity_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="800dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="800dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/raised_button"
                    style="@style/RaisedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/circular_bar"
                    app:layout_constraintEnd_toStartOf="@+id/flat_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/flat_button"
                    style="@style/FlatButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/horizontal_bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/raised_button"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_add_white_24dp"
                    app:elevation="8dp"
                    app:fabSize="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.166" />

                <ProgressBar
                    android:id="@+id/horizontal_bar"
                    style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:indeterminate="true"
                    app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/alert_button"
                    style="@style/PrimaryButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/show_alert"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/horizontal_bar" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/confirm_button"
                    style="@style/PrimaryButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/show_confirmation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/alert_button" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/progress_dialog_button"
                    style="@style/PrimaryButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/show_progress_dialog"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_button" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/snack_bar_button"
                    style="@style/FlatButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/show_snackbar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/progress_dialog_button" />


                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_compat"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:checked="true"
                    android:text="@string/switch_compat"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:theme="@style/Switch" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:layout_marginStart="8dp"
                    android:checked="true"
                    android:text="@string/checkbox"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:theme="@style/Switch" />

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/checkbox"
                    app:layout_constraintStart_toStartOf="parent">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/radio_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/radio_2" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/radio_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_1" />


                </RadioGroup>


            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
